--- a/data/ui/MenulibreWindow.glade
+++ b/data/ui/MenulibreWindow.glade
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixel_size">16</property>
+    <property name="icon_name">dialog-cancel</property>
+  </object>
+  <object class="GtkImage" id="image10">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixel_size">16</property>
+    <property name="icon_name">edit-delete-symbolic</property>
+    <property name="use_fallback">True</property>
+  </object>
   <object class="GtkImage" id="image11">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -8,6 +21,24 @@
     <property name="icon-size">1</property>
   </object>
   <object class="GtkImage" id="image12">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-open</property>
+    <property name="icon-size">1</property>
+  </object>
+  <object class="GtkImage" id="image13">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixel_size">16</property>
+    <property name="icon_name">dialog-apply</property>
+  </object>
+  <object class="GtkImage" id="image14">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-open</property>
+    <property name="icon-size">1</property>
+  </object>
+  <object class="GtkImage" id="image15">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="stock">gtk-open</property>
@@ -490,37 +521,6 @@
       <action-widget response="-6">icon_selection_cancel</action-widget>
       <action-widget response="-10">icon_selection_apply</action-widget>
     </action-widgets>
-  </object>
-  <object class="GtkImage" id="image1">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">16</property>
-    <property name="icon_name">dialog-cancel</property>
-  </object>
-  <object class="GtkImage" id="image10">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">16</property>
-    <property name="icon_name">edit-delete-symbolic</property>
-    <property name="use_fallback">True</property>
-  </object>
-  <object class="GtkImage" id="image13">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">16</property>
-    <property name="icon_name">dialog-apply</property>
-  </object>
-  <object class="GtkImage" id="image14">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-open</property>
-    <property name="icon-size">1</property>
-  </object>
-  <object class="GtkImage" id="image15">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="stock">gtk-open</property>
-    <property name="icon-size">1</property>
   </object>
   <object class="GtkImage" id="image2">
     <property name="visible">True</property>
@@ -1738,7 +1738,7 @@ Please see http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spe
                                                   <object class="GtkTreeViewColumn" id="treeviewcolumn3">
                                                     <property name="title" translatable="yes">Show</property>
                                                     <child>
-                                                      <object class="GtkCellRendererToggle" id="cellrenderertoggle1"/>
+                                                      <object class="GtkCellRendererToggle" id="actions_show_renderer"/>
                                                       <attributes>
                                                         <attribute name="active">0</attribute>
                                                       </attributes>
@@ -1750,7 +1750,8 @@ Please see http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spe
                                                     <property name="title" translatable="yes">Name</property>
                                                     <property name="expand">True</property>
                                                     <child>
-                                                      <object class="GtkCellRendererText" id="cellrenderertext1">
+                                                      <object class="GtkCellRendererText" id="actions_name_renderer">
+                                                        <property name="editable">True</property>
                                                         <property name="placeholder_text">Action Name</property>
                                                       </object>
                                                       <attributes>
@@ -1763,11 +1764,12 @@ Please see http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spe
                                                   <object class="GtkTreeViewColumn" id="treeviewcolumn5">
                                                     <property name="title" translatable="yes">Command</property>
                                                     <child>
-                                                      <object class="GtkCellRendererText" id="cellrenderertext2">
+                                                      <object class="GtkCellRendererText" id="actions_command_renderer">
+                                                        <property name="editable">True</property>
                                                         <property name="placeholder_text">Command</property>
                                                       </object>
                                                       <attributes>
-                                                        <attribute name="text">2</attribute>
+                                                        <attribute name="text">3</attribute>
                                                       </attributes>
                                                     </child>
                                                   </object>
@@ -1822,6 +1824,32 @@ Please see http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spe
                                                 <property name="label" translatable="yes">Clear</property>
                                                 <property name="use_underline">True</property>
                                                 <property name="icon_name">list-remove-all-symbolic</property>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="homogeneous">True</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkToolButton" id="actions_move_up">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">False</property>
+                                                <property name="label" translatable="yes">Move Up</property>
+                                                <property name="use_underline">True</property>
+                                                <property name="icon_name">go-up-symbolic</property>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="homogeneous">True</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkToolButton" id="actions_move_down">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">False</property>
+                                                <property name="label" translatable="yes">Move Down</property>
+                                                <property name="use_underline">True</property>
+                                                <property name="icon_name">go-down-symbolic</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">False</property>
